--- a/index.html
+++ b/index.html
@@ -20,13 +20,24 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  border-bottom: 9px solid rgba(0,0,0,.2);
 }
 #blurb {
   color: rgba(0,0,0,.7);
-  font-size: 3rem;
+  font-size: 2rem;
 }
 #logo{
   max-width: 500px;
+  width: 80%;
+}
+h2{
+  text-align: center;
+  font-size: 4rem;
+  margin: 0;
+  padding: 0;
+  margin-top: 2rem;
+  font-weight: normal;
+  color: #444;
 }
 #team{
   display: flex;
@@ -42,6 +53,7 @@ body {
   margin: 2rem;
   border-top-left-radius: 1rem;
   border-bottom-right-radius: 1rem;
+  border-bottom: 9px solid rgba(0,0,0,.2);
 }
 .member .photo{
   width: 150px;
@@ -73,12 +85,19 @@ footer{
   text-align: center;
   color: #bbb;
 }
+@media all and (max-width: 600px) {
+  #team{
+    flex-direction: column;
+    align-items: center;
+  }
+}
 </style>
 <body>
 <div id="hero">
   <img src="logo.png" id="logo"></img>
   <div id="blurb">Bokay is the shizzle</div>
 </div>
+<h2>Our Team</h2>
 <div id="team">
   <div class="member">
     <div class="photo">
